--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 
   display: grid;
   place-content: center;
+  overflow: hidden;
 
 }
 
@@ -13,4 +14,6 @@ main {
   /* max-width: 375px; */
   width: 375px;
   overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+
 }
